--- a/src/plugin/README
+++ b/src/plugin/README
@@ -3,6 +3,7 @@ ju plugin: JeeUtil JavaScript Library :: Developer's Choice...
 
 ju plugin's
 ==========
+Note: you will find YUI compressed minified files under "minified" directory
 
 ***** Moved from own SVN repository to GitHub Open source respository *****
 
