--- a/src/plugin/README
+++ b/src/plugin/README
@@ -3,7 +3,7 @@ ju plugin: JeeUtil JavaScript Library :: Developer's Choice...
 
 ju plugin's
 ==========
-Note: you will find YUI compressed minified files under "minified" directory
+Note: you will find YUI compressed minified files under Download section https://github.com/jeevatkm/jeeutil-js-library/downloads
 
 ***** Moved from own SVN repository to GitHub Open source respository *****
 
